fix alignments

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,89 @@
-@import "../app/styles/common/common.scss";
+@use '../app/styles/util/util';
+@use '../app/styles/page/page';
 
-.container {
-  @include align-center();
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 90px;
+  z-index: 11;
+}
 
-  width: 94vw;
-  padding: 30px;
-  height: 100%;
+.header-filler {
+  height: 40px;
+}
+
+.raw-content-page-layout, .form-page-layout {
+  @include util.flex-layout-column;
+
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.form-page-layout {
+  & .body {
+    box-sizing: border-box;
+    padding: 25px;
+    font-size: 17px;
+
+    & .social-login-wrapper {
+      & > * {
+        width: 100%;
+        margin: 0 0 10px;
+      }
+    }
+  }
+}
+
+.raw-content-page-layout {
+  padding: 0 0 7vh;
+
+  & .logo-wrapper {
+    padding-top: 5vh;
+  }
+}
+
+@media only screen and (max-width: 999px) {
+
+  .header, .header-filler {
+    display: none;
+  }
+
+  .raw-content-page-layout, .form-page-layout {
+    padding-left: 3vw;
+    padding-right: 3vw;
+    min-height: 80vh;
+  }
+
+  .form-page-layout {
+    & .body {
+      width: 94vw;
+    }
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+
+  .header, .header-filler {
+    display: block;
+  }
+
+  .raw-content-page-layout, .form-page-layout {
+    padding-left: 90px;
+    padding-right: 90px;
+    min-height: 50vh;
+  }
+
+  .raw-content-page-layout {
+    & app-information-button {
+      margin-top: 30px;
+    }
+  }
+
+  .form-page-layout {
+    & .body {
+      width: 400px;
+    }
+  }
 }
