--- a/src/app/styles/common/common.scss
+++ b/src/app/styles/common/common.scss
@@ -17,7 +17,6 @@
 @mixin align-center {
   align-content: center;
   align-items: center;
-  justify-content: center;
   text-align: center;
 }
 
